主题、资源、主色调梳理

--- a/BaseDebug/src/main/res/layout/fragment_test_text.xml
+++ b/BaseDebug/src/main/res/layout/fragment_test_text.xml
@@ -35,7 +35,7 @@
             android:text=""
             android:textColor="#ffffff"
             android:textSize="11.5sp"
-            app:bgtv_backgroundColor="#FD481F"
+            app:bgtv_backgroundColor="@color/red_dot"
             app:bgtv_isRadiusHalfHeight="true"
             app:bgtv_strokeColor="#0000ff"
             app:bgtv_strokeWidth="0dp" />
