--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
-    android:background="@color/common_debug_bg"
+    android:background="@color/windowBackground"
     android:orientation="vertical"
     android:padding="4dp">
 
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:maxLines="2"
         android:text="XX模块日志"
-        android:textColor="@color/common_debug_text"
+        android:textColor="@color/textColorPrimary"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:paddingRight="8dp"
         android:paddingBottom="6dp"
         android:text="查看"
-        android:textColor="@color/common_debug_text"
+        android:textColor="@color/textColorSecondary"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/log_send"
@@ -52,7 +52,7 @@
         android:paddingRight="8dp"
         android:paddingBottom="6dp"
         android:text="发送"
-        android:textColor="@color/common_debug_text"
+        android:textColor="@color/textColorSecondary"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/log_open"
         app:layout_constraintEnd_toEndOf="parent"
