--- a/CommonList/src/main/res/layout/common_load_more.xml
+++ b/CommonList/src/main/res/layout/common_load_more.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="52dp"
-    tools:background="#252734">
+    tools:background="@color/windowBackground">
 
     <TextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="正在加载..."
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/secondary_text"
         android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
