--- a/CommonWebview/src/main/res/layout/common_zixie_fragment_webview.xml
+++ b/CommonWebview/src/main/res/layout/common_zixie_fragment_webview.xml
@@ -41,6 +41,7 @@
         android:paddingLeft="18dp"
         android:paddingRight="16dp"
         android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_webview_progressbar">
 
@@ -61,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:textColor="#FF3AC8EF"
+            android:textColor="@color/colorAccent"
             android:textSize="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
