--- a/BaseDebug/src/main/res/layout/activity_http_test.xml
+++ b/BaseDebug/src/main/res/layout/activity_http_test.xml
@@ -123,7 +123,7 @@
                 android:lineSpacingMultiplier="1.25"
                 android:maxLines="10"
                 android:text="Result:"
-                android:textColor="@color/colorPrimaryText" />
+                android:textColor="@color/textColorPrimary" />
 
 
         </LinearLayout>
