--- a/BaseDebug/src/main/res/layout/debug_tab_svga.xml
+++ b/BaseDebug/src/main/res/layout/debug_tab_svga.xml
@@ -32,9 +32,9 @@
         android:textColor="@color/white"
         android:textSize="9dp"
         android:visibility="gone"
-        app:bgtv_backgroundColor="#FD481F"
+        app:bgtv_backgroundColor="@color/red_dot"
         app:bgtv_isRadiusHalfHeight="true"
-        app:bgtv_strokeColor="#FD481F"
+        app:bgtv_strokeColor="@color/red_dot"
         app:bgtv_strokeWidth="1dp"
         app:layout_constraintBottom_toTopOf="@+id/tab_icon"
         app:layout_constraintEnd_toEndOf="parent"
