--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_header.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_header.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="vertical"
-        android:background="@color/colorControlNormal"
+        android:background="@color/colorAccent"
         android:padding="12dp">
 
     <TextView
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:textColor="@color/colorPrimaryText"
+            android:textColor="@color/textColorIcons"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
