--- a/CommonDebug/src/main/res/layout/com_bihe0832_fragment_debug_tab.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_fragment_debug_tab.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/windowBackground"
+        android:orientation="vertical">
 
         <TextView
-                android:id="@+id/test_tips"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lineHeight="30dp"
-                android:padding="20dp"
-                android:textSize="12dp"
-                android:visibility="gone"
-                tools:text="用于日常功能体验、所有应用共通的信息调试，谨慎添加" />
+            android:id="@+id/test_tips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineHeight="30dp"
+            android:padding="20dp"
+            android:textColor="@color/primary_text"
+            android:textSize="12dp"
+            android:visibility="gone"
+            tools:text="用于日常功能体验、所有应用共通的信息调试，谨慎添加"
+            tools:visibility="visible" />
 
         <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_alignParentBottom="true"
-                android:background="@color/common_debug_activity_split_bg"
-                android:textIsSelectable="true" />
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/divider"
+            android:textIsSelectable="true" />
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/fragment_list_info_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipChildren="false" />
+            android:id="@+id/fragment_list_info_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipChildren="false" />
 
     </LinearLayout>
 
