--- a/CommonList/src/main/res/layout/common_activity_list.xml
+++ b/CommonList/src/main/res/layout/common_activity_list.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/windowBackground"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
