--- a/CommonPhotos/src/main/res/layout/com_bihe0832_dialog_photo_chooser.xml
+++ b/CommonPhotos/src/main/res/layout/com_bihe0832_dialog_photo_chooser.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:background="@color/com_bihe0832_dialog_bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/com_bihe0832_dialog_bg"
+    android:orientation="vertical">
 
 
     <TextView
-            android:id="@+id/takePhotoBtn"
-            android:text="拍照"
-            android:textSize="14sp"
-            android:textColor="@color/com_bihe0832_dialog_title"
-            android:paddingLeft="24dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        android:id="@+id/takePhotoBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="24dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:text="拍照"
+        android:textColor="@color/com_bihe0832_dialog_title"
+        android:textSize="14sp" />
 
     <View
-            android:background="@color/gray"
-            android:layout_width="match_parent"
-            android:layout_height="0.3dp" />
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="@color/divider" />
 
 
     <TextView
-            android:id="@+id/choosePhotoBtn"
-            android:text="从相册选择"
-            android:textSize="14sp"
-            android:paddingLeft="24dp"
-            android:textColor="@color/com_bihe0832_dialog_title"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        android:id="@+id/choosePhotoBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="24dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:text="从相册选择"
+        android:textColor="@color/com_bihe0832_dialog_title"
+        android:textSize="14sp" />
 
 </LinearLayout>
