--- a/CommonShare/src/main/res/values/common_share_res.xml
+++ b/CommonShare/src/main/res/values/common_share_res.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="share_bg_color">#A6000000</color>
-    <color name="share_panel_color">#BF2D2D2B</color>
-    <color name="share_text_color">#ADADAD</color>
-    <dimen name="share_title_text_size">10dp</dimen>
-    <dimen name="share_item_text_size">@dimen/share_title_text_size</dimen>
+    <color name="com_bihe0832_share_bg_color">#A6000000</color>
+    <color name="com_bihe0832_share_panel_color">#BF2D2D2B</color>
+    <color name="com_bihe0832_share_text_color">#ADADAD</color>
+    <dimen name="com_bihe0832_share_title_text_size">10dp</dimen>
+    <dimen name="com_bihe0832_share_item_text_size">@dimen/com_bihe0832_share_title_text_size</dimen>
 
     <style name="shareItemText">
-        <item name="android:textColor">@color/share_text_color</item>
-        <item name="android:textSize">@dimen/share_item_text_size</item>
+        <item name="android:textColor">@color/com_bihe0832_share_text_color</item>
+        <item name="android:textSize">@dimen/com_bihe0832_share_item_text_size</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
