--- a/CommonSplash/src/main/res/layout/com_bihe0832_activity_splash.xml
+++ b/CommonSplash/src/main/res/layout/com_bihe0832_activity_splash.xml
@@ -27,6 +27,7 @@
         android:text="@string/app_name"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:textColor="@color/textColorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_icon" />
@@ -39,6 +40,7 @@
         android:layout_marginBottom="80dp"
         android:text="@string/app_desc"
         android:textSize="14dp"
+        android:textColor="@color/textColorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
