--- a/Framework/src/main/res/drawable-xxhdpi/button_bg_shape.xml
+++ b/Framework/src/main/res/drawable-xxhdpi/button_bg_shape.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:width="64dp" android:height="35dp">
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#768289" />
+            <stroke android:width="1dp" android:color="@color/colorButtonNormal" />
             <corners android:radius="6dp" />
         </shape>
     </item>
