主题、资源、主色调梳理

--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:maxLines="2"
         android:text="XX模块日志"
-        android:textColor="@color/textColorPrimary"
+        android:textColor="@color/colorOnBackground"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
