--- a/CommonAbout/src/main/res/layout/about_layout.xml
+++ b/CommonAbout/src/main/res/layout/about_layout.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:gravity="center"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="@color/colorOnBackground"
             android:textSize="14dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="12dp"
                 android:textColor="@color/colorPrimary"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                tools:text="Version:1.1.1" />
 
         </LinearLayout>
 
