--- a/CommonDebug/src/main/res/layout/com_bihe0832_fragment_debug_main.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_fragment_debug_main.xml
@@ -12,7 +12,8 @@
         android:background="@color/colorPrimary"
         app:tl_tab_space_equal="true"
         app:tl_textBold="SELECT"
-        app:tl_textSelectColor="@color/textColorIcons"
+        app:tl_textSelectColor="@color/colorOnPrimary"
+        app:tl_textUnselectColor="@color/textColorSecondary"
         app:tl_textsize="12dp" />
 
     <androidx.viewpager.widget.ViewPager
