--- a/CommonPraise/src/main/res/layout/com_bihe0832_dialog_user_praise.xml
+++ b/CommonPraise/src/main/res/layout/com_bihe0832_dialog_user_praise.xml
@@ -23,11 +23,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="36dp"
         android:layout_marginRight="24dp"
         android:gravity="center_horizontal"
         android:text="你的支持是我们不断优化的动力"
-        android:textColor="@color/primary_text"
+        android:textColor="@color/textColorPrimary"
         android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/dialog_bg"
@@ -38,42 +38,69 @@
         android:id="@+id/icon_praise"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:src="@mipmap/praise_ic"
         app:layout_constraintEnd_toEndOf="@+id/dialog_bg"
         app:layout_constraintStart_toStartOf="@+id/dialog_bg"
         app:layout_constraintTop_toBottomOf="@+id/head" />
 
-    <Button
-        android:id="@+id/positive"
+
+    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
+        android:id="@+id/positive_bg"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="36dp"
-        android:background="@drawable/praise_btn_go_market"
-        android:text="赐我力量"
-        android:textColor="@color/white"
-        android:textSize="14dp"
+        android:text=""
+        app:bgtv_backgroundColor="@color/accent"
+        app:bgtv_cornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="@+id/dialog_bg"
         app:layout_constraintStart_toStartOf="@+id/dialog_bg"
         app:layout_constraintTop_toBottomOf="@+id/icon_praise" />
 
     <Button
-        android:id="@+id/negative"
+        android:id="@+id/positive"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/transparent"
+        android:text="@string/com_bihe0832_praise_positive"
+        android:textColor="@color/colorOnPrimary"
+        android:textSize="14dp"
+        app:layout_constraintBottom_toBottomOf="@+id/positive_bg"
+        app:layout_constraintEnd_toEndOf="@+id/positive_bg"
+        app:layout_constraintStart_toStartOf="@+id/positive_bg"
+        app:layout_constraintTop_toTopOf="@+id/positive_bg" />
+
+
+    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
+        android:id="@+id/negative_bg"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="48dp"
-        android:background="@drawable/praise_btn_go_feedback"
-        android:text="吐槽一下"
-        android:textColor="#888888"
-        android:textSize="14dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="36dp"
+        android:gravity="center"
+        android:text=""
+        app:bgtv_cornerRadius="4dp"
+        app:bgtv_strokeColor="@color/accent"
+        app:bgtv_strokeWidth="1dp"
         app:layout_constraintBottom_toBottomOf="@+id/dialog_bg"
-        app:layout_constraintEnd_toEndOf="@+id/positive"
-        app:layout_constraintStart_toStartOf="@+id/positive"
-        app:layout_constraintTop_toBottomOf="@+id/positive" />
+        app:layout_constraintEnd_toEndOf="@+id/positive_bg"
+        app:layout_constraintStart_toStartOf="@+id/positive_bg"
+        app:layout_constraintTop_toBottomOf="@+id/positive_bg" />
 
+    <Button
+        android:id="@+id/negative"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/transparent"
+        android:text="@string/com_bihe0832_praise_negative"
+        android:textColor="@color/textColorPrimary"
+        android:textSize="14dp"
+        app:layout_constraintBottom_toBottomOf="@+id/negative_bg"
+        app:layout_constraintEnd_toEndOf="@+id/negative_bg"
+        app:layout_constraintStart_toStartOf="@+id/negative_bg"
+        app:layout_constraintTop_toTopOf="@+id/negative_bg" />
 
     <ImageButton
         android:id="@+id/close"
