--- a/Framework/src/main/res/values/activity_theme.xml
+++ b/Framework/src/main/res/values/activity_theme.xml
@@ -4,7 +4,7 @@
     <style name="Title.Base" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">16dp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/colorOnPrimary</item>
     </style>
 
     <style name="AAF.Animation.Activity" parent="@android:style/Animation.Activity">
@@ -38,6 +38,7 @@
     <style name="AAF.AppTheme.Toolbar.Base" parent="Base.V7.Widget.AppCompat.Toolbar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="titleTextAppearance">@style/Title.Base</item>
         <item name="contentInsetStart">0dp</item>
         <item name="titleMargin">0dp</item>
         <item name="contentInsetStartWithNavigation">0dp</item>
@@ -48,16 +49,8 @@
     <style name="AAF.AppTheme.Toolbar.Light" parent="AAF.AppTheme.Toolbar.Base">
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowTranslucentStatus">true</item>
-        <item name="titleTextAppearance">@style/Title.Base</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="navigationIcon">@mipmap/ic_left_arrow_white</item>
-    </style>
-
-    <style name="AAF.AppTheme.Fullscreen" parent="@android:style/Theme.NoTitleBar.Fullscreen">
-        <item name="android:windowAnimationStyle">@style/AAF.Animation.Activity</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="AAF.ActivityTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
@@ -76,7 +69,7 @@
         <!--各个控制控件的默认颜色 与colorAccent相反-->
         <item name="colorControlNormal">@color/colorControlNormal</item>
         <!--页面背景色-->
-        <item name="android:windowBackground">@color/colorWindowBg</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
         <!--控制normal状态下button的颜色-->
         <item name="colorButtonNormal">@color/colorButtonNormal</item>
         <item name="colorControlActivated">@color/colorControlActivated</item>
