--- a/Framework/src/main/res/values/activity_theme.xml
+++ b/Framework/src/main/res/values/activity_theme.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Title.Base" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <item name="android:textSize">16dp</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/colorOnPrimary</item>
-    </style>
-
     <style name="AAF.Animation.Activity" parent="@android:style/Animation.Activity">
         <!--        新页面进入 -->
         <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
@@ -35,10 +29,16 @@
         <item name="android:activityCloseExitAnimation">@anim/fade_out</item>
     </style>
 
+    <style name="AAF.AppTheme.Title.Text" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/colorOnPrimary</item>
+    </style>
+
     <style name="AAF.AppTheme.Toolbar.Base" parent="Base.V7.Widget.AppCompat.Toolbar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="titleTextAppearance">@style/Title.Base</item>
+        <item name="titleTextAppearance">@style/AAF.AppTheme.Title.Text</item>
         <item name="contentInsetStart">0dp</item>
         <item name="titleMargin">0dp</item>
         <item name="contentInsetStartWithNavigation">0dp</item>
