--- a/CommonAbout/src/main/res/layout/card_setting.xml
+++ b/CommonAbout/src/main/res/layout/card_setting.xml
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="12dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccent"
             android:textSize="14dp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/settings_title"
